kubernetes/argo-cd/projects/aws/production-hm/nessie/environments/production/kubernetes-manifests/hm-nessie-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-nessie-ingress
  namespace: production-hm-nessie
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: nessie.hongbomiao.com
  labels:
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: production-hm-nessie
spec:
  rules:
    - host: nessie.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-nessie
                port:
                  number: 19120
  tls:
    - hosts:
        - nessie.hongbomiao.com
      secretName: hm-nessie-certificate
